--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
+bin/
+obj/
+*~
+*.[oa]
+*.exe
 dbGUIInterfaceImplemention.cbp
 dbGUIInterfaceImplemention.depend
 dbGUIInterfaceImplemention.layout
-*.[oa]
 #*.dll
-*.exe
 #*.so
-bin/
 #share/
 #redist/
-#obj/
 #lib/
-#*~
+
